--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@twilio/runtime-handler": "1.1.3",
+    "crc-32": "^1.2.0",
     "node-fetch": "^2.6.2",
     "twilio": "^3.56"
   },
